# splatnet

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: aggregate_private_matches.py  example.py
splatnet/splatnet2/: __init__.py  config.py  models.py  splatnet2.py
