[tool.poetry]
name = "splatnet"
version = "0.1.0"
description = "Wrapper for Splatnet (Splatoon API)"
authors = ["unatoon <unatoon@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/unatoon/splatnet"
homepage = "https://github.com/unatoon/splatnet"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
