[tool.poetry]
name = "splatnet"
version = "0"
description = "Wrapper for Splatnet (Splatoon API)"
authors = ["unatoon <unatoon@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/unatoon/splatnet"
homepage = "https://github.com/unatoon/splatnet"
documentation = "https://github.com/unatoon/splatnet"

[tool.poetry-version-plugin]
source = "init"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
beautifulsoup4 = "^4.11.1"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
